--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
     "test": "echo \"No test specified\" && exit 0",
-    "dev": "quasar dev"
+    "dev": "quasar dev",
+    "build": "rm -rf dist; bili -c bili.config.js library/index.js --format esm --file-name oarepo-quasar-es-facets.esm.js && cp library/package.json README.md dist/"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@quasar/app": "^3.0.0-beta.1",
     "babel-eslint": "^10.0.1",
+    "bili": "^5.0.5",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-vue": "^7.0.0",
